# webmaster-social

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-all.yaml  ci-backend.yaml  ci-frontend.yaml
backend/: main.py
backend/api/: v1_articles.py  v1_dashboard.py  v1_logs.py  v1_projects.py  v1_settings.py  v1_tasks.py
backend/controllers/: articles_controller.py  dashboard_controller.py  logs_controller.py  parser_controller.py  project_controller.py  setting_controller.py  social_networks_controller.py
backend/core/: database.py  logger.py  settings.py
backend/models/: article.py  article_status.py  dashboard_data.py  log_entry.py  mixins.py  project.py  publish_article_status.py  setting.py  settings.py
backend/repositories/: articles_repository.py  articles_statuses_repository.py  logs_repository.py  projects_repository.py  settings_repository.py
backend/schemas/: articles_schema.py  dashboard_schema.py  project_schema.py  setting_schema.py  task_schema.py
backend/utils/: cloudflare_handler.py  request_client.py  string_handler.py  url_handler.py
frontend/: .eslintrc.json  .prettierrc  bun.lockb  next.config.js  package.json  tsconfig.json
migration/: env.py
migration/versions/: 05648e9c5742_refactor_project_model_article_element_.py  05a0716671bd_chore_change_table_name_for_logentry_.py  0c4503ffeb72_feat_add_settings_relationship_to_.py  10fff852e8ad_feat_refactor_settings_model.py  165969e2c863_refactor_peoject_model_active_default_.py  33a5a963a899_refactor_projects_model.py  37a4ebe726e0_init_1.py  387519c783f3_first_init.py  3cc0490556c7_init_2.py  413a36fd368f_feat_add_publish_article_link_field_to_.py  4209b3843936_feat_add_settings_relationship_to_.py  48d0bd5f41db_feat_add_publisharticlestatus_model.py  4e3f14ffae63_chore_restore_article_table.py  4ee7851ec8a4_init_models.py  59f2deae0d7c_feat_change_type_for_article_project_.py  59f4517df2fe_feat_add_settings_relationship_to_.py  666e5e337a95_feat_add_try_count_field_to_.py  687e2b745964_refactor_setting_field_in_project_model_.py  6bc3e1146812_refactor_setting_field_in_project_model.py  72918d6b310b_feat_implement_article_model.py  7e6585b55892_refactor_project_model_article_element_.py  8b241597cdad_feat_add_settings_model.py  91ac56df81dc_feat_add_config_fields_for_project_model.py  9336e230e3b5_feat_projectbase_and_projectcreate_.py  96a77c93d7a5_feat_add_projects_fields.py  b98a625b6986_feat_add_status_text_field_to_.py  bbc3e2702705_refactor_peoject_model.py  d21914eb6d55_feat_change_publisharticlestatus_to_.py  d87e7c386e9e_refactor_setting_field_in_project_model_.py  d881c503a17f_feat_add_logentry_model.py  e3736920fcd3_chore_change_table_name_for_.py  e8763fd0e264_feat_add_unique_constraint_to_.py  eb5a13f9c615_feat_add_unique_name_and_url_to_project_.py  fc3b8084efb5_refactor_project_model_article_element_.py
tests/: conftest.py
tests/api/: test_v1_projects.py  test_v1_settings.py
tests/controllers/: test_articles_controller.py  test_dashboard_controller.py  test_logs_controller.py  test_parser_controller.py  test_project_controller.py  test_setting_controller.py  test_social_networks_controller.py
tests/core/: test_database.py
tests/repositories/: test_articles_repository.py  test_articles_statuses_repository.py  test_logs_repository.py  test_projects_repository.py  test_settings_repository.py
(+91 files in other folders)
